QuickSortTrace/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;D:\Google Drive\Learning\OpenU\מבוא לאלגוריתמים\20407-QuickSortStackDepth\QuickSortTrace
-d
D:\Google Drive\Learning\OpenU\מבוא לאלגוריתמים\20407-QuickSortStackDepth\QuickSortTrace\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
D:\Google Drive\Learning\OpenU\מבוא לאלגוריתמים\20407-QuickSortStackDepth\QuickSortTrace\QuickSortTrace.java
<---- end of javadoc command ---->
Loading source file D:\Google Drive\Learning\OpenU\מבוא לאלגוריתמים\20407-QuickSortStackDepth\QuickSortTrace\QuickSortTrace.java...
D:\Google Drive\Learning\OpenU\מבוא לאלגוריתמים\20407-QuickSortStackDepth\QuickSortTrace\QuickSortTrace.java:189: error: ')' expected
                        quickSortStackTrace(q+1, r, q + (int)Math.ceil((double)(r-q+1)/_divisor)) + 1;     
                                                                                                     ^
D:\Google Drive\Learning\OpenU\מבוא לאלגוריתמים\20407-QuickSortStackDepth\QuickSortTrace\QuickSortTrace.java:196: error: ';' expected
    private int max(int i, int j)
                                 ^
2 errors
